Update affiliation for ameukam

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1924,7 +1924,7 @@ sigs:
     chairs:
     - github: ameukam
       name: Arnaud Meukam
-      company: VMware
+      company: Independent
     - github: dims
       name: Davanum Srinivas
       company: Amazon
@@ -1934,7 +1934,7 @@ sigs:
       company: Google
     - github: ameukam
       name: Arnaud Meukam
-      company: VMware
+      company: Independent
     - github: upodroid
       name: Mahamed Ali
       company: Cisco
