Updating contributor-comms team members

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -27,17 +27,14 @@ usergroups:
       - sig-contribex
       - sig-contribex-comms
     members:
-      - AvineshTripathi
       - chrisshort
       - fsmunoz
       - fykaa
       - hii-arpit
-      - iancoldwater
       - kaslin
       - mfahlandt
-      - natalisucks
+      - mbianchidev
       - nitishfy
-      - paris
       - sandeepkanabar
       - sandipanpanda
       - sreeram-venkitesh
