Correct Cailyn's GitHub username, which was changed on 2024/10/10, and a spelling error.

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2767,9 +2767,9 @@ sigs:
     - github: IanColdwater
       name: Ian Coldwater
       company: Docker
-    - github: cailynse
+    - github: cailyn-codes
       name: Cailyn Edwards
-      company: Octa
+      company: Okta
     - github: tabbysable
       name: Tabitha Sable
       company: Datadog
