Onboarding Cailyn Edwards as additonal SIG Security chair! (#8085)
* Onboarding Cailyn Edwards as SIG Security chair!

* Correct Cailyn's GitHub username, which was changed on 2024/10/10, and a spelling error.

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2787,6 +2787,9 @@ sigs:
     - github: IanColdwater
       name: Ian Coldwater
       company: Docker
+    - github: cailyn-codes
+      name: Cailyn Edwards
+      company: Okta
     - github: tabbysable
       name: Tabitha Sable
       company: Datadog
