--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1932,6 +1932,7 @@ sigs:
     - github: BenTheElder
       name: Benjamin Elder
       company: Google
+      email: bentheelder@google.com
     - github: ameukam
       name: Arnaud Meukam
       company: Independent
@@ -3015,6 +3016,7 @@ sigs:
     - github: BenTheElder
       name: Benjamin Elder
       company: Google
+      email: bentheelder@google.com
     - github: alvaroaleman
       name: Alvaro Aleman
       company: Red Hat
