--- a/sigs.yaml
+++ b/sigs.yaml
@@ -288,6 +288,7 @@ sigs:
     - github: dims
       name: Davanum Srinivas
       company: Amazon
+      email: davanum@gmail.com
     - github: johnbelamaric
       name: John Belamaric
       company: Google
@@ -1930,6 +1931,7 @@ sigs:
     - github: dims
       name: Davanum Srinivas
       company: Amazon
+      email: davanum@gmail.com
     tech_leads:
     - github: BenTheElder
       name: Benjamin Elder
