Add email to sigs.yaml
Add my email to sigs.yaml

Ref: https://groups.google.com/a/kubernetes.io/g/leads/c/3A2d1_onI3o

Signed-off-by: Arnaud Meukam <ameukam@gmail.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1935,6 +1935,7 @@ sigs:
     - github: ameukam
       name: Arnaud Meukam
       company: Independent
+      email: ameukam@gmail.com
     - github: dims
       name: Davanum Srinivas
       company: Amazon
@@ -1947,6 +1948,7 @@ sigs:
     - github: ameukam
       name: Arnaud Meukam
       company: Independent
+      email: ameukam@gmail.com
     - github: upodroid
       name: Mahamed Ali
       company: Cisco
