update puerco's company
Signed-off-by: cpanato <ctadeu@gmail.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2489,7 +2489,7 @@ sigs:
       company: Chainguard, Inc
     - github: puerco
       name: Adolfo García Veytia
-      company: Chainguard, Inc
+      company: Stacklok, Inc
     emeritus_leads:
     - github: alejandrox1
       name: Jorge Alarcon Ochoa
