--- a/sigs.yaml
+++ b/sigs.yaml
@@ -413,6 +413,12 @@ sigs:
       slack: prod-readiness
     owners:
     - https://raw.githubusercontent.com/kubernetes/community/master/sig-architecture/OWNERS
+  - name: wg-device-management
+    description: Contains prototype code for future work driven by WG Device Management
+    contact:
+      slack: wg-device-management
+    owners:
+    - https://raw.githubusercontent.com/kubernetes-sigs/wg-device-management/main/OWNERS
   - name: wg-serving
     owners:
     - https://raw.githubusercontent.com/kubernetes-sigs/wg-serving/main/OWNERS
