--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2170,12 +2170,15 @@ sigs:
     - github: mikezappa87
       name: Michael Zappa
       company: Microsoft
+      email: michael.zappa@gmail.com
     - github: shaneutt
       name: Shane Utt
       company: Red Hat
+      email: sutt@redhat.com
     - github: thockin
       name: Tim Hockin
       company: Google
+      email: thockin@google.com
     tech_leads:
     - github: aojea
       name: Antonio Ojea
@@ -2184,9 +2187,11 @@ sigs:
     - github: danwinship
       name: Dan Winship
       company: Red Hat
+      email: danwinship@redhat.com
     - github: thockin
       name: Tim Hockin
       company: Google
+      email: thockin@google.com
     emeritus_leads:
     - github: caseydavenport
       name: Casey Davenport
