docs: fix SIG regular meeting zoom link for api-machinery zoom meeting

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -45,7 +45,7 @@ sigs:
     time: "11:00"
     tz: PT (Pacific Time)
     frequency: biweekly
-    url: https://zoom.us/my/apimachinery
+    url: https://zoom.us/j/91842015362?pwd=NUdZRjdNV0NsWXJjbDZXQWc5cm91QT09
     archive_url: https://goo.gl/0lbiM9
     recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP21oW3hbLyjjj4XhrwKxH2R
   contact:
