--- a/sigs.yaml
+++ b/sigs.yaml
@@ -753,7 +753,7 @@ sigs:
     recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP28HaTzSlFe6RJVxpFmbUvF
   contact:
     slack: sig-cli
-    mailing_list: https://groups.google.com/forum/#!forum/kubernetes-sig-cli
+    mailing_list: https://groups.google.com/a/kubernetes.io/g/sig-cli
     teams:
     - name: sig-cli-api-reviews
       description: API Changes and Reviews
